# moodle-scraper-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  main.py  pyproject.toml  requirements.txt  test_collect_files.py  test_discovery.py
config/: excluded.txt
src/: helpers.py  main.py  scraper.py
