[project]
name = "moodle-api"
version = "0.1.0"
description = "Moodle DHBW Mannheim scraper API — scheduled file sync served over HTTP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "fastapi==0.115.0",
    "lxml==5.3.0",
    "requests==2.32.3",
    "uvicorn[standard]==0.30.6",
    "python-multipart>=0.0.9",
]
